--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "angular-material-icons": "^0.7.1",
     "angular-simple-logger": "^0.1.7",
     "angular-translate": "^2.12.0",
+    "express-jwt": "^3.0.1",
     "ionic-material": "^0.4.1",
     "ionic-sdk": "git://github.com/driftyco/ionic.git#v1.3.0",
     "jquery": "^3.1.0",
     "leaflet": "^0.7.7",
     "localforage": "^1.4.2",
+    "mongoose": "^4.1.2",
     "ng-cordova": "^0.1.27-alpha",
     "ng-file-upload": "^12.2.8",
+    "passport": "^0.2.2",
+    "passport-local": "^1.0.0",
     "svg-morpheus": "^0.3.0",
     "ui-leaflet": "^1.0.1"
   },
